--- a/obl/html/login.html
+++ b/obl/html/login.html
@@ -40,17 +40,15 @@
             <div class="col-md-10">
                 <div class="login-container">
                     <h2 class="text-center">LOGIN</h2>
-                    <form id="loginForm">
-                        <div class="form-group">
-                            <label for="username">Usuario</label>
-                            <input type="text" class="form-control" id="username" placeholder="Ingrese su usuario" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="password">Contraseña</label>
-                            <input type="password" class="form-control" id="password" placeholder="Ingrese su contraseña" required>
-                        </div>
-                        <button type="submit" class="btn btn-primary btn-block mt-2">Iniciar Sesión</button>
-                    </form>
+
+                    <label for="username">Usuario</label>
+                    <input type="text" class="form-control" id="username" placeholder="Ingrese su usuario" required>
+
+                    <label for="password">Contraseña</label>
+                    <input type="password" class="form-control" id="password" placeholder="Ingrese su contraseña"
+                        required>
+
+                    <button type="submit" class="btn btn-primary btn-block mt-2">Iniciar Sesión</button>
                 </div>
             </div>
         </div>
